Closed Bug 739962 Opened 14 years ago Closed 14 years ago

fix -Wunused-but-set-variable warnings in content/

Categories

(Core :: Audio/Video, defect)

All
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14

People

(Reporter: froydnj, Assigned: froydnj)

References

(Blocks 1 open bug)

Details

Attachments

(1 file, 1 obsolete file)

/home/froydnj/src/m-c.git/content/base/src/nsContentUtils.cpp: In static member function 'static void nsContentUtils::InitializeModifierStrings()': /home/froydnj/src/m-c.git/content/base/src/nsContentUtils.cpp:488:12: warning: variable 'rv' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/media/MediaResource.cpp: In member function 'void mozilla::MediaResource::MoveLoadsToBackground()': /home/froydnj/src/m-c.git/content/media/MediaResource.cpp:1211:12: warning: variable 'rv' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/media/MediaResource.cpp: In member function 'void mozilla::MediaResource::ModifyLoadFlags(nsLoadFlags)': /home/froydnj/src/m-c.git/content/media/MediaResource.cpp:1233:12: warning: variable 'rv' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/media/nsBuiltinDecoderStateMachine.cpp: In member function 'virtual void nsBuiltinDecoderStateMachine::StartBuffering()': /home/froydnj/src/m-c.git/content/media/nsBuiltinDecoderStateMachine.cpp:2166:30: warning: variable 'stats' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/media/ogg/nsOggReader.cpp: In member function 'nsresult nsOggReader::SeekBisection(PRInt64, const nsOggReader::SeekRange&, PRUint32)': /home/froydnj/src/m-c.git/content/media/ogg/nsOggReader.cpp:1168:15: warning: variable 'previousGuess' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/base/src/nsEventSource.cpp: In member function 'virtual nsresult nsEventSource::Observe(nsISupports*, const char*, const PRUnichar*)': /home/froydnj/src/m-c.git/content/base/src/nsEventSource.cpp:470:12: warning: variable 'rv' set but not used [-Wunused-but-set-variable] /home/froydnj/src/m-c.git/content/xbl/src/nsXBLDocumentInfo.cpp: In member function 'void nsXBLDocGlobalObject::SetContext(nsIScriptContext*)': /home/froydnj/src/m-c.git/content/xbl/src/nsXBLDocumentInfo.cpp:275:12: warning: variable 'rv' set but not used [-Wunused-but-set-variable]
Attached patch patch (obsolete) — Splinter Review
Attachment #610107 - Attachment is patch: true
Attachment #610107 - Flags: review?(bent.mozilla)
Comment on attachment 610107 [details] [diff] [review] patch Review of attachment 610107 [details] [diff] [review]: ----------------------------------------------------------------- ::: content/media/nsBuiltinDecoderStateMachine.cpp @@ +2162,5 @@ > UpdateReadyState(); > mState = DECODER_STATE_BUFFERING; > LOG(PR_LOG_DEBUG, ("%p Changed state from DECODING to BUFFERING, decoded for %.3lfs", > mDecoder.get(), decodeDuration.ToSeconds())); > + DebugOnly<nsMediaDecoder::Statistics> stats = mDecoder->GetStatistics(); You'll need an #ifdef that matches PR_LOG
Attached patch patchSplinter Review
Comment on attachment 610110 [details] [diff] [review] patch Good point, now to get Bugzilla to behave...
Attachment #610110 - Attachment is patch: true
Attachment #610110 - Flags: review?(bent.mozilla)
Attachment #610107 - Attachment is obsolete: true
Attachment #610107 - Flags: review?(bent.mozilla)
Comment on attachment 610110 [details] [diff] [review] patch r=me assuming this all compiles and such :)
Attachment #610110 - Flags: review?(bent.mozilla) → review+
Assignee: nobody → nfroyd
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla14
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: