Bug 739962 - fix -Wunused-but-set-variable warnings in content; r=bent