content/media/nsBuiltinDecoderStateMachine.cpp
@@ -2163,7 +2163,9 @@ void nsBuiltinDecoderStateMachine::StartBuffering()
   mState = DECODER_STATE_BUFFERING;
   LOG(PR_LOG_DEBUG, ("%p Changed state from DECODING to BUFFERING, decoded for %.3lfs",
                      mDecoder.get(), decodeDuration.ToSeconds()));
+#ifdef PR_LOGGING
   nsMediaDecoder::Statistics stats = mDecoder->GetStatistics();
+#endif
   LOG(PR_LOG_DEBUG, ("%p Playback rate: %.1lfKB/s%s download rate: %.1lfKB/s%s",
     mDecoder.get(),
     stats.mPlaybackRate/1024, stats.mPlaybackRateReliable ? "" : " (unreliable)",
